src/objects/PIR_Form__c.object
<CustomObject>
    <fields>
        <fullName>Airline_Code__c</fullName>
        <label>Airline Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_issuing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Airline issuing</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Airline Headquarters</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PIR Forms</relationshipLabel>
        <relationshipName>Baggage_Claims</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airport_Arrival__c</fullName>
        <inlineHelpText>This is help text</inlineHelpText>
        <label>Airport (Arrival)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Baggage Proration.
Amount in which the Airline Issuing will issue the Prorate Requests related to one PIR. This field can be different from the PIR_Passenger_Claim_Amount__c field (which is the NON converted amount paid to end customer)</description>
        <label>Passenger Converted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arrival_Services__c</fullName>
        <label>Arrival Services</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Hour__c</fullName>
        <label>Closing Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>00:00</fullName>
                </value>
                <value>
                <fullName>01:00</fullName>
                </value>
                <value>
                <fullName>02:00</fullName>
                </value>
                <value>
                <fullName>03:00</fullName>
                </value>
                <value>
                <fullName>04:00</fullName>
                </value>
                <value>
                <fullName>05:00</fullName>
                </value>
                <value>
                <fullName>06:00</fullName>
                </value>
                <value>
                <fullName>07:00</fullName>
                </value>
                <value>
                <fullName>08:00</fullName>
                </value>
                <value>
                <fullName>09:00</fullName>
                </value>
                <value>
                <fullName>10:00</fullName>
                </value>
                <value>
                <fullName>11:00</fullName>
                </value>
                <value>
                <fullName>12:00</fullName>
                </value>
                <value>
                <fullName>13:00</fullName>
                </value>
                <value>
                <fullName>14:00</fullName>
                </value>
                <value>
                <fullName>15:00</fullName>
                </value>
                <value>
                <fullName>16:00</fullName>
                </value>
                <value>
                <fullName>17:00</fullName>
                </value>
                <value>
                <fullName>18:00</fullName>
                </value>
                <value>
                <fullName>19:00</fullName>
                <default>true</default>
                    <label>19:00</label>
                </value>
                <value>
                <fullName>20:00</fullName>
                </value>
                <value>
                <fullName>21:00</fullName>
                </value>
                <value>
                <fullName>22:00</fullName>
                </value>
                <value>
                <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                <fullName>BN10</fullName>
                </value>
                <value>
                <fullName>BN11</fullName>
                </value>
                <value>
                <fullName>BN12</fullName>
                </value>
                <value>
                <fullName>VP01</fullName>
                </value>
                <value>
                <fullName>VP02</fullName>
                </value>
                <value>
                <fullName>VP03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date_Formated__c</fullName>
        <label>Created Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Prorate_Dept_Airline_issuing__c</fullName>
        <label>Email (Prorate Dept.) Airline issuing</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Date__c</fullName>
        <label>Flight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Number__c</fullName>
        <label>Flight Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Routing_Info__c</fullName>
        <label>Full Routing Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Passenger&apos;s Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Bags__c</fullName>
        <label>Number of Bags</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opening_Hour__c</fullName>
        <label>Opening Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>00:00</fullName>
                </value>
                <value>
                <fullName>01:00</fullName>
                </value>
                <value>
                <fullName>02:00</fullName>
                </value>
                <value>
                <fullName>03:00</fullName>
                </value>
                <value>
                <fullName>04:00</fullName>
                </value>
                <value>
                <fullName>05:00</fullName>
                </value>
                <value>
                <fullName>06:00</fullName>
                </value>
                <value>
                <fullName>07:00</fullName>
                </value>
                <value>
                <fullName>08:00</fullName>
                <default>true</default>
                    <label>08:00</label>
                </value>
                <value>
                <fullName>09:00</fullName>
                </value>
                <value>
                <fullName>10:00</fullName>
                </value>
                <value>
                <fullName>11:00</fullName>
                </value>
                <value>
                <fullName>12:00</fullName>
                </value>
                <value>
                <fullName>13:00</fullName>
                </value>
                <value>
                <fullName>14:00</fullName>
                </value>
                <value>
                <fullName>15:00</fullName>
                </value>
                <value>
                <fullName>16:00</fullName>
                </value>
                <value>
                <fullName>17:00</fullName>
                </value>
                <value>
                <fullName>18:00</fullName>
                </value>
                <value>
                <fullName>19:00</fullName>
                </value>
                <value>
                <fullName>20:00</fullName>
                </value>
                <value>
                <fullName>21:00</fullName>
                </value>
                <value>
                <fullName>22:00</fullName>
                </value>
                <value>
                <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Currency_Claim__c</fullName>
        <description>Baggage Proration
Field fed by Net/World Tracer integration. Currency of the amount paid to end customer.
The currency of conversion for prorate requests is in the standard Currency field.</description>
        <label>Currency Claim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Currency_of_conversion__c</fullName>
        <description>Baggage Proration. 
Currency in which the Airline Issuing will issue the Prorate Requests related to one PIR.</description>
        <inlineHelpText>Currency in which the Airline Issuing will issue the Prorate Requests related to one PIR.</inlineHelpText>
        <label>Currency of conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                <fullName>AED</fullName>
                </value>
                <value>
                <fullName>ALL</fullName>
                </value>
                <value>
                <fullName>AMD</fullName>
                </value>
                <value>
                <fullName>ANG</fullName>
                </value>
                <value>
                <fullName>AOA</fullName>
                </value>
                <value>
                <fullName>ARS</fullName>
                </value>
                <value>
                <fullName>AUD</fullName>
                </value>
                <value>
                <fullName>AWG</fullName>
                </value>
                <value>
                <fullName>AZN</fullName>
                </value>
                <value>
                <fullName>BAM</fullName>
                </value>
                <value>
                <fullName>BBD</fullName>
                </value>
                <value>
                <fullName>BDT</fullName>
                </value>
                <value>
                <fullName>BGN</fullName>
                </value>
                <value>
                <fullName>BHD</fullName>
                </value>
                <value>
                <fullName>BIF</fullName>
                </value>
                <value>
                <fullName>BMD</fullName>
                </value>
                <value>
                <fullName>BND</fullName>
                </value>
                <value>
                <fullName>BOB</fullName>
                </value>
                <value>
                <fullName>BRL</fullName>
                </value>
                <value>
                <fullName>BSD</fullName>
                </value>
                <value>
                <fullName>BTN</fullName>
                </value>
                <value>
                <fullName>BWP</fullName>
                </value>
                <value>
                <fullName>BZD</fullName>
                </value>
                <value>
                <fullName>CAD</fullName>
                </value>
                <value>
                <fullName>CHF</fullName>
                </value>
                <value>
                <fullName>CLP</fullName>
                </value>
                <value>
                <fullName>CNY</fullName>
                </value>
                <value>
                <fullName>COP</fullName>
                </value>
                <value>
                <fullName>CRC</fullName>
                </value>
                <value>
                <fullName>CUP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIR_File_Ref__c</fullName>
        <externalId>true</externalId>
        <label>PIR File Ref.</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PIR_File_Type__c</fullName>
        <label>PIR File Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                <fullName>DELAYED</fullName>
                </value>
                <value>
                <fullName>DAMAGED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIR_Passenger_Claim_Amount__c</fullName>
        <description>Baggage Proration.
Field fed by Net/World Tracer integration. Amount (NOT converted) paid to end customer;
The converted amount is in the &apos;Amount__c&apos; field.</description>
        <label>Passenger Claim Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passenger_s_First_Name__c</fullName>
        <label>Passenger&apos;s First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_s_initials__c</fullName>
        <formula>LEFT( Passenger_s_First_Name__c , 1) &amp; LEFT( Last_Name__c , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger&apos;s initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Number__c</fullName>
        <label>Tag Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>MR.</fullName>
                </value>
                <value>
                <fullName>MRS.</fullName>
                </value>
                <value>
                <fullName>MS.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                <fullName>WWW</fullName>
                </value>
                <value>
                <fullName>XXX</fullName>
                </value>
                <value>
                <fullName>YYY</fullName>
                </value>
                <value>
                <fullName>ZZZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PIR Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PIR_File_Ref__c</columns>
        <columns>Airline_issuing__c</columns>
        <columns>Airport_Arrival__c</columns>
        <columns>Passenger_s_First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Amount__c</columns>
        <columns>PIR_Currency_of_conversion__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>PIR Form Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIR Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PIR_Currency_NOT_null</fullName>
        <active>false</active>
        <description>TO BE DELETED - NOT CONVENIENT FOR USER EXPERIENCE, it is obvious if Converted Amount/Currency Is forgotten.
This currency picklist field must be populated in the PIR Form.</description>
        <errorConditionFormula>ISPICKVAL(PIR_Currency_of_conversion__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>PIR_Currency_of_conversion__c</errorDisplayField>
        <errorMessage>You must enter the currency used for your Prorate Requests.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PIR_Passenger_Converted_Amount_Not_Null</fullName>
        <active>false</active>
        <description>The &apos;Passenger Converted Amount&apos; cannot be null
TO BE DELETED - NOT CONVENIENT FOR USER EXPERIENCE, it is obvious if Converted Amount/Currency Is forgotten.</description>
        <errorConditionFormula>OR(ISBLANK( Amount__c ),Amount__c = 0.00)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The Passenger Converted Amount field cannot be null. Please enter a converted amount.</errorMessage>
    </validationRules>
</CustomObject>